Fix menu recipes link error
Add a return home button on all recipes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/lasagna.html">World's Best Lasagna</a>
+        <ul>
+            <li><a href="./recipes/lasagna.html">World's Best Lasagna</a></li>
+            <li><a href="./recipes/carbonara.html"></a>Spaghetti Carbonara</li>
+            <li><a href="./recipes/classic-burger.html">Classic Burger</a></li>
+        </ul>
     </body>
 </html>
