--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Spaghetti alla Carbonara</h1>
+    <a href="../index.html">Return Home</a>
     <img src="./spaghetti-carbonara.webp" alt="Spaghetti alla Carbonara">
     <h2>Ingredients</h2>
     <ul>
