--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+    <a href="../index.html">Return Home</a>
     <img src="./lasagna.webp" alt="World best lasagna recipes" width="400" height="300">
     <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
     <h2>Ingredients</h2>
