--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="./recipes/lasagna.html">World's Best Lasagna</a></li>
-            <li><a href="./recipes/carbonara.html"></a>Spaghetti Carbonara</li>
+            <li><a href="./recipes/carbonara.html">Spaghetti Carbonara</a></li>
             <li><a href="./recipes/classic-burger.html">Classic Burger</a></li>
         </ul>
     </body>
