--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -6,9 +6,10 @@
     <title>Spaghetti alla Carbonara</title>
 </head>
 <body>
-    <h1>Spaghetti alla Carbonara</h1>
     <a href="../index.html">Return Home</a>
-    <img src="./spaghetti-carbonara.webp" alt="Spaghetti alla Carbonara">
+    <h1>Spaghetti alla Carbonara</h1>
+    <img src="./spaghetti-carbonara.webp" alt="Spaghetti alla Carbonara" width="400" height="300">
+    <p>This classic spaghetti alla carbonara recipe is smooth, creamy, and full of rich Italian flavor. </p>
     <h2>Ingredients</h2>
     <ul>
         <li>Oil: This traditional Italian recipe starts with olive oil.</li>
