--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="./recipes/lasagna.html">World's Best Lasagna</a></li>
-            <li><a href="./recipes/carbonara.html">Spaghetti Carbonara</a></li>
-            <li><a href="./recipes/classic-burger.html">Classic Burger</a></li>
-        </ul>
+        <section class="hero">
+            <h1 class="h1-title">Odin Recipes</h1>
+            <img src="./recipes/banner.jpg" alt="cooking recipes" width="1000px" height="400px">
+        </section>
+        
+        <section class="recipes-list">
+            <ul>
+                <li><a href="./recipes/lasagna.html">World's Best Lasagna</a></li>
+                <li><a href="./recipes/carbonara.html">Spaghetti Carbonara</a></li>
+                <li><a href="./recipes/classic-burger.html">Classic Burger</a></li>
+            </ul>
+        </section>
     </body>
 </html>
