--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -1,32 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spaghetti alla Carbonara</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
+
 <body>
-    <a href="../index.html">Return Home</a>
-    <h1>Spaghetti alla Carbonara</h1>
-    <img src="./spaghetti-carbonara.webp" alt="Spaghetti alla Carbonara" width="400" height="300">
-    <p>This classic spaghetti alla carbonara recipe is smooth, creamy, and full of rich Italian flavor. </p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>Oil: This traditional Italian recipe starts with olive oil.</li>
-        <li>Guanciale: Buy guanciale (or cured pork cheek) at your local butcher. If you can’t find it, you can substitute unsmoked bacon or pancetta.</li>
-        <li>Spaghetti: Use store-bought or homemade spaghetti noodles. If you like, you can substitute bucatini for the spaghetti. </li>
-        <li>Eggs: Three large eggs add richness and flavor.</li>
-        <li>Cheese: Opt for hand-shredded Pecorino Romano cheese. You can substitute Parmesan, if preferred.</li>
-        <li>Seasonings: This flavorful spaghetti alla carbonara is simply seasoned with salt and pepper.</li>
-    </ul>
-    <h2>How to Make Spaghetti alla Carbonara</h2>
-    <p>You’ll find the full, step-by-step recipe below (with photos) — but here’s a brief overview of what you can expect when you make traditional spaghetti alla carbonara:</p>
-    <ol>
-        <li>Cook the pork in olive oil until browned and crispy, then drain on paper towels.</li>
-        <li>Boil the spaghetti in salted water. Drain and return to the pot. Let cool.</li>
-        <li>Whisk the eggs, 1/2 of the cheese, and some pepper in a bowl until smooth.</li>
-        <li>Pour the egg mixture over the pasta, stirring quickly, until creamy.</li>
-        <li>Stir in the pork, then top with the remaining cheese and more black pepper.</li>
-    </ol>
+    <section class="recipes-pages-hero">
+        <a href="../index.html">Return Home</a>
+        <h1 class="h1-title">Spaghetti alla Carbonara</h1>
+        <img src="../images/spaghetti-carbonara.webp" alt="Spaghetti alla Carbonara" width="400" height="300" class="banner-img-center">
+    </section>
+    <section class="process">
+        <p>This classic spaghetti alla carbonara recipe is smooth, creamy, and full of rich Italian flavor. </p>
+        <h2 class="h2-title">Ingredients</h2>
+        <ul>
+            <li>Oil: This traditional Italian recipe starts with olive oil.</li>
+            <li>Guanciale: Buy guanciale (or cured pork cheek) at your local butcher. If you can’t find it, you can
+                substitute unsmoked bacon or pancetta.</li>
+            <li>Spaghetti: Use store-bought or homemade spaghetti noodles. If you like, you can substitute bucatini for
+                the
+                spaghetti. </li>
+            <li>Eggs: Three large eggs add richness and flavor.</li>
+            <li>Cheese: Opt for hand-shredded Pecorino Romano cheese. You can substitute Parmesan, if preferred.</li>
+            <li>Seasonings: This flavorful spaghetti alla carbonara is simply seasoned with salt and pepper.</li>
+        </ul>
+        <h2 class="h2-title">How to Make Spaghetti alla Carbonara</h2>
+        <p>You’ll find the full, step-by-step recipe below (with photos) — but here’s a brief overview of what you can
+            expect when you make traditional spaghetti alla carbonara:</p>
+        <ol>
+            <li>Cook the pork in olive oil until browned and crispy, then drain on paper towels.</li>
+            <li>Boil the spaghetti in salted water. Drain and return to the pot. Let cool.</li>
+            <li>Whisk the eggs, 1/2 of the cheese, and some pepper in a bowl until smooth.</li>
+            <li>Pour the egg mixture over the pasta, stirring quickly, until creamy.</li>
+            <li>Stir in the pork, then top with the remaining cheese and more black pepper.</li>
+        </ol>
+    </section>
 </body>
+
 </html>
