--- a/recipes/classic-burger.html
+++ b/recipes/classic-burger.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Classic Burger</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
+
 <body>
-    <a href="../index.html">Return Home</a>
-    <h1>The Classic Burger</h1>
-    <img src="./classic-burger.webp" alt="classic burger" height="300" width="400">
-    <p>This hamburger patty recipe uses ground beef and an easy bread crumb mixture. Nothing beats a simple hamburger on a warm summer evening! Enjoy on ciabatta, Kaiser, or potato rolls topped with your favorite condiments.</p>
-    <h2>Ingredients</h2>
+    <section class="recipes-pages-hero">
+        <a href="../index.html">Return Home</a>
+        <h1>The Classic Burger</h1>
+        <img src="../images/classic-burger.webp" alt="classic burger" height="300" width="400" class="banner-img-center">
+    </section>
+    <section class="process">
+        <p>This hamburger patty recipe uses ground beef and an easy bread crumb mixture. Nothing beats a simple
+            hamburger on a warm summer evening! Enjoy on ciabatta, Kaiser, or potato rolls topped with your favorite
+            condiments.</p>
+        <h2 class="h2-title">Ingredients</h2>
         <ul>
             <li>1 large egg</li>
             <li>½ teaspoon salt</li>
@@ -18,14 +26,18 @@
             <li>1 pound ground beef</li>
             <li>½ cup fine dry bread crumbs</li>
         </ul>
-    <h2>Steps</h2>
-    <ol>
-        <li>Preheat an outdoor grill for high heat and lightly oil grate.</li>
-        <li>Whisk egg, salt, and pepper together in a medium bowl.</li>
-        <li>Add ground beef and bread crumbs; mix with your hands or a fork until well blended.</li>
-        <li>Form into four 3/4-inch-thick patties.</li>
-        <li>Place patties on the preheated grill. Cover and cook 6 to 8 minutes per side, or to desired doneness. An instant-read thermometer inserted into the center should read at least 160 degrees F (70 degrees C).</li>
-        <li>Serve hot and enjoy!</li>
-    </ol>
+        <h2 class="h2-title">Steps</h2>
+        <ol>
+            <li>Preheat an outdoor grill for high heat and lightly oil grate.</li>
+            <li>Whisk egg, salt, and pepper together in a medium bowl.</li>
+            <li>Add ground beef and bread crumbs; mix with your hands or a fork until well blended.</li>
+            <li>Form into four 3/4-inch-thick patties.</li>
+            <li>Place patties on the preheated grill. Cover and cook 6 to 8 minutes per side, or to desired doneness. An
+                instant-read thermometer inserted into the center should read at least 160 degrees F (70 degrees C).
+            </li>
+            <li>Serve hot and enjoy!</li>
+        </ol>
+    </section>
 </body>
+
 </html>
