--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <section class="hero">
             <h1 class="h1-title">Odin Recipes</h1>
-            <img src="./images/banner.jpg" alt="cooking recipes" width="1000px" height="400px">
+            <img src="./images/banner.jpg" alt="cooking recipes" width="1000px" height="400px" class="homepage-banner">
         </section>
         
         <section class="recipes-list">
